tighten the dependencies

--- a/README.html
+++ b/README.html
@@ -27,8 +27,7 @@
 <li><a href="https://gitlab.mpi-sws.org/iris/stdpp">std++</a> 1.10.0</li>
 <li><a href="https://gitlab.mpi-sws.org/iris/iris/">Iris</a> 4.2.0</li>
 <li><a href="https://gitlab.inria.fr/coquelicot/coquelicot/">Coquelicot</a> 3.4.1</li>
-<li><a href="https://github.com/coq-community/autosubst">Autosubst</a> 1.8</li>
-<li><a href="https://github.com/math-comp/math-comp">Mathcomp-solvable</a> 2.2.0</li>
+<li><a href="https://github.com/math-comp/math-comp">Mathcomp</a> 2.2.0</li>
 </ul>
 
 <p>The recommended way to install the dependencies is through <a href="https://opam.ocaml.org/doc/Install.html">opam</a>.</p>
